--- a/src/components/Employe/Employe.scss
+++ b/src/components/Employe/Employe.scss
@@ -9,7 +9,7 @@
 .employe__name{
   height: 60px;
   background-color: #FFDCDC;
-  border-radius: 9px 9px 0 0;
+  border-radius: 0 9px 0 0;
   text-align: start;
   padding-left: 30px;
   font:{
